[tool.poetry]
name = "isuportal-commithooks"
version = "0.1.0"
description = ""
authors = ["locolemat <122878505+locolemat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pytelegrambotapi = "^4.22.1"
emoji = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
